# c2023-a

./: CMakeLists.txt
Gobang/: CMakeLists.txt  README.md
Gobang/Data/: hash
Gobang/Header/: evaluate.h  generator.h  hash.h  scrap.h  search.h  ui.h  variable.h  zobrist.h
Gobang/Resource/: evaluate.cpp  generator.cpp  hash.cpp  main.cpp  scrap.cpp  search.cpp  ui.cpp  variable.cpp  zobrist.cpp
Gobang/report/: 五子棋答辩.pptx
level1/: CMakeLists.txt
level1/p02_is_prime/: main.c
level1/p06_hanoi/: main.c
level1/p08_push_boxes/: main.c  第一关.txt  第三关.txt  第二关.txt  第五关.txt  第四关.txt
level1/p10_warehouse/: main.c  warehouse.txt
